--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="centralizer">
         <div id="container"><h1>Swear Filter Bypasser</h1>
-            <p>Here is a tool to convert Latin script texts to similar-looking characters in the <a href="https://en.wikipedia.org/wiki/Cherokee_syllabary">Cherokee syllabary writing system</a>. This can be useful for bypassing swear filters, or just giving your text a cool style.</p>
+            <p>Here is a tool to convert Latin script texts to similar-looking characters in the <a href="https://en.wikipedia.org/wiki/Cherokee_syllabary" target="_blank">Cherokee syllabary writing system</a>. This can be useful for bypassing swear filters, or just giving your text a cool style.</p>
             <p>Note: This tool currently only supports the 26 letters in the English alphabet. Other symbols will remain unaffected. Not all characters are converted, since some replacements couldn't be found.</p>
             <div>
                 <div class="field-container">
