--- a/index.html
+++ b/index.html
@@ -7,35 +7,46 @@
     <title>Swear Filter Bypasser</title>
     <script src="converter.js" type="text/javascript"></script><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Unbounded:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="centralizer">
-        <div id="container"><h1>Swear Filter Bypasser</h1>
-            <p>Here is a tool to convert Latin script texts to similar-looking characters in the <a href="https://en.wikipedia.org/wiki/Cherokee_syllabary" target="_blank">Cherokee syllabary writing system</a>. This can be useful for bypassing swear filters, or just giving your text a cool style.</p>
-            <p>Note: This tool currently only supports the 26 letters in the English alphabet. Other symbols will remain unaffected. Not all characters are converted, since some replacements couldn't be found.</p>
-            <div>
-                <div class="field-container">
-                    <h2>Original text</h2>
-                    <input type="text" id="originalText">
-                </div>
-                <div class="field-container">
-                    <h2>Algorithm</h2>
-                    <select name="algorithmUsed" id="algorithmUsed">
-                        <option value="classic">Classic (Cherokee syllabary)</option>
-                        <option value="classicDotted">Classic Interrupted (Cherokee syllabary)</option>
+    <div id="container"><h1>Swear Filter Bypasser</h1>
+        <h2>Your go-to tool for bypassing profanity filters. Bookmark it! 🔖</h2>
+        <p>Here is a tool to convert Latin script texts to similar-looking characters in the <a href="https://en.wikipedia.org/wiki/Cherokee_syllabary" target="_blank">Cherokee syllabary writing system</a>. This can be useful for bypassing swear filters, or just giving your text a cool style.</p>
+        <p><b>Note:</b> This tool only supports the 26 letters in the English alphabet. Other symbols will remain unaffected. Not all characters are converted, since some replacements couldn't be found.</p>
+        <div>
+            <div class="field-container">
+                <h2>Original text</h2>
+                <input type="text" id="originalText">
+            </div>
+            <div class="field-container">
+                <h2>Algorithm</h2>
+                <select name="algorithmUsed" id="algorithmUsed">
+                    <optgroup label="Cherokee Syllabary">
+                        <option value="classic">Cherokee Syllabary</option>
+                        <option value="classicDotted">Cherokee Syllabary Interrupted</option>
+                    </optgroup>
+                    <optgroup label="Cyrillic">
                         <option value="cyrillic">Cyrillic</option>
                         <option value="cyrillicDotted">Cyrillic Interrupted</option>
-                        <option value="blocksDotted">Blocks Interrupted</option>
+                    </optgroup>
+                    <optgroup label="Greek">
+                        <option value="greek">Greek</option>
+                        <option value="greekDotted">Greek Interrupted</option>
+                    </optgroup>
+                    <optgroup label="Miscellaneous">
+                        <option value="blocksDotted">Blocks Interrupted (Not recommended)</option>
                         <option value="originalTextDotted">Original Text Interrupted</option>
-                    </select></div>
-                <div class="field-container">
-                    <h2>Result</h2>
-                    <input type="text" id="convertedText" readonly></div>    
-            </div>
-            <button onclick="conversion()">Convert!</button></div>
+                        <option value="originalTextSimpleDotted">Original Text Interrupted (Simplified)</option>
+                    </optgroup>
+                </select></div>
+            <div class="field-container">
+                <h2>Result</h2>
+                <input type="text" id="convertedText" readonly></div>    
+           </div>
+           <button onclick="conversion()">Convert!</button>
+           <h5>Made by crimeraaa, 2023</h5>
     </div>
 </body>
 </html>
